test/files/neg/gadts2.check
gadts2.scala:7: error: type mismatch;
 found   : "abc".type (with underlying type String)
 required: B
  (s1: Super[Any]) match { case Sub(f) => f("abc") }
                                            ^
one error found
